feat: Implement core persistence layer (Entities, Repositories, Enums)
This commit introduces the complete Model and Repository layers for the DriveService API,
based on the defined database schema.